--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,39 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.maze"
-          android:versionCode="1"
-          android:versionName="1.0">
+    package="com.example.maze"
+    android:versionCode="1"
+    android:versionName="1.0" >
 
     <uses-sdk
-            android:minSdkVersion="16"
-            android:targetSdkVersion="17"/>
+        android:minSdkVersion="16"
+        android:targetSdkVersion="17" />
 
     <application
-            android:allowBackup="true"
-            android:icon="@drawable/finish"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme">
+        android:allowBackup="true"
+        android:icon="@drawable/finish"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
         <activity
-                android:name=".game_play.MazeActivity"
-                android:label="@string/app_name"
-                android:screenOrientation="portrait">
+            android:name="com.example.maze.game_play.MazeActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
-                android:name=".level_select.LevelSelectActivity"
-                android:label="@string/level_select"
-                android:screenOrientation="portrait"/>
+            android:name="com.example.maze.level_select.LevelSelectActivity"
+            android:label="@string/level_select"
+            android:screenOrientation="portrait" />
         <activity
-                android:name=".MainActivity"
-                android:label="@string/app_name"
-                android:screenOrientation="portrait">
+            android:name="com.example.maze.MainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-                android:name=".high_scores.HighScoresActivity"
-                android:label="High Scores"/>
+            android:name="com.example.maze.high_scores.HighScoresActivity"
+            android:label="High Scores" />
+        <activity
+            android:name="com.example.maze.options.OptionsActivity"
+            android:label="@string/title_activity_options" >
+        </activity>
     </application>
 
 </manifest>
